--- a/app/static/js/index.html
+++ b/app/static/js/index.html
@@ -6,8 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Courgette|Pacifico:400,700" rel="stylesheet">
-	<title>P2P Chat</title>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
+	<title>CHAT MMT</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<style type="text/css">
 		body {
 			color: #999;
@@ -122,7 +124,7 @@
 		<form action="/signup" method="post">
 			<div class="form-header">
 				<h2>Sign Up</h2>
-				<p>Welcome to P2P Chat</p>
+				<p>Welcome to Computer Networking</p>
 			</div>
 			<div class="form-group">
 				<label>Username</label>
@@ -144,7 +146,6 @@
 		</form>
 		<div class="text-center small">Already have an account? <a href="signinPage">Login here</a></div>
 	</div>
-	<script src="{{ url_for('static', filename='js/jquery.min.js')}}"></script>s
 	<script>
 		$(document).ready(function () {
 			$('#name').keyup(function () {
